  Version 5.0.beta04     July 20, 2001
  Version 5.0.beta03     July 19, 2001
  Version 5.0.beta02     June 30, 2001
  Version 5.0.beta01     June 8, 2001
  Version 5.0.beta00     April 6, 2001

-------------------------------------------------------------------------------
MB-SYSTEM VERSION 5.4 RELEASE NOTES:
-------------------------------------------------------------------------------

-----> 5.4.2139 (August 19, 2013)

Build system: Further modification to the src/mbview/Makefile.am file.

-----> 5.4.2138 (August 18, 2013)

Build system: Further modifications to the Makefile.am files.

MBopts: Now allows users to specify the tide model used by OTPS. Also now works
with all three variants of the OTPS package.

MBareaclean: Fixed memory allocations problems.

MBgrdviz: Added capability to launch mbnavedit and mbvelocitytool on selected
swath data (contributed by Christian Ferreira).

-----> 5.4.2137 (August 9, 2013)

Build system: Still attempting to fix problems with the autoconf build system on
Ubuntu machines. Change mbsystem/src/opts/Makefile.am so that building this
utility does not depend on GMT libraries (since it doesn't).

-----> 5.4.2136 (August 8, 2013)

Build system: Attempted to fix problems with the autoconf build system on
Ubuntu machines. Reset the automake version to 2.65 from 2.69 as specified
in the mbsystem/configure.in file. Also added a conditional reference to
libmbgsf to the requirements for mbcopy in mbsystem/src/utilities/Makefile.am.

-----> 5.4.2135 (August 7, 2013)

Mbdatalist: Fixed generation of old-format fbt files.

Web page documentation: Updated basic web pages included in the distribution.

-----> 5.4.2134 (July 31, 2013)

Heading and nav interpolation (src/mbaux/mb_spline.c): Fixed function
mb_linear_interp_degrees() so that negative latitude values are allowed.

Mbkongsbergpreprocess: Added checking so that interpolated heading and
navigation are in the correct domains.

-----> 5.4.2133 (July 29, 2013)
