@@ -48,7 +48,10 @@ endif
 
 AM_CFLAGS = ${libnetcdf_CFLAGS} ${libgmt_CFLAGS}
 
-AM_CPPFLAGS = -I@top_srcdir@/src/proj -I@top_srcdir@/src/mr1pr -I@top_srcdir@/src/surf @CDF_INC_DIR@ @GMT_INC_DIR@
+AM_CPPFLAGS = -I@top_srcdir@/src/proj \
+	-I@top_srcdir@/src/mr1pr \
+	-I@top_srcdir@/src/surf \
+	@CDF_INC_DIR@ @GMT_INC_DIR@
 if BUILD_GSF
   AM_CPPFLAGS += -I@top_srcdir@/src/gsf
 endif
