@@ -1,5 +1,3 @@
-bin_PROGRAMS = mbgrdviz mbeditviz
-
 lib_LTLIBRARIES = libmbview.la
 
 include_HEADERS = mbview.h
@@ -11,18 +9,10 @@ AM_CPPFLAGS = -I@top_srcdir@/src/mbio \
        -I@top_srcdir@/src/proj \
        -I@top_srcdir@/src/mr1pr \
        -I@top_srcdir@/src/surf \
-       @CDF_INC_DIR@ @MOTIF_INC_DIR@ @GL_INC_DIR@ @GMT_INC_DIR@
+       @CDF_INC_DIR@ @MOTIF_INC_DIR@ \
+       @GL_INC_DIR@ @GMT_INC_DIR@
 if BUILD_GSF
   AM_CPPFLAGS += -I@top_srcdir@/src/gsf
-endif
-
-AM_LDFLAGS = -L$(top_builddir)/src/mbio \
-       -L$(top_builddir)/src/mbaux \
-       -L$(top_builddir)/src/mr1pr \
-       -L$(top_builddir)/src/proj \
-       -L$(top_builddir)/src/surf
-if BUILD_GSF
-  AM_LDFLAGS +=  -L$(top_builddir)/src/gsf
 endif
 
 libmbview_la_CFLAGS = -DMBVIEW_LIBRARY
@@ -41,19 +31,3 @@ libmbview_la_LIBADD = ${libnetcdf_LIBS} ${libgmt_LIBS} @XDR_LIB@ \
        $(top_builddir)/src/mbaux/libmbaux.la \
        @MOTIF_LIB@ @GL_LIB@ \
        ${libnetcdf_LIBS} ${libgmt_LIBS}
-
-mbgrdviz_SOURCES =  mbgrdviz_main.c mbgrdviz_callbacks.c  mbgrdviz_creation.c
-mbgrdviz_LDADD = ${libnetcdf_LIBS} ${libgmt_LIBS} @MOTIF_LIB_DIR@ \
-       $(top_builddir)/src/mbio/libmbio.la $(top_builddir)/src/mbaux/libmbaux.la \
-       $(top_builddir)/src/mbaux/libmbxgr.la $(top_builddir)/src/mbaux/libmbps.la \
-        $(top_builddir)/src/mbview/libmbview.la \
-       @MOTIF_LIB@ @GL_LIB@ \
-       ${libnetcdf_LIBS} ${libgmt_LIBS} $(LIBM)
-
-mbeditviz_SOURCES = mbeditviz_main.c mbeditviz_callbacks.c mbeditviz_prog.c mbeditviz_creation.c
-mbeditviz_LDADD = ${libnetcdf_LIBS} ${libgmt_LIBS} @MOTIF_LIB_DIR@ \
-       $(top_builddir)/src/mbio/libmbio.la $(top_builddir)/src/mbaux/libmbaux.la \
-       $(top_builddir)/src/mbaux/libmbxgr.la $(top_builddir)/src/mbaux/libmbps.la \
-        $(top_builddir)/src/mbview/libmbview.la \
-       @MOTIF_LIB@ @GL_LIB@ \
-       ${libnetcdf_LIBS} ${libgmt_LIBS} $(LIBM)
